# wow-player

./: README.md
manager/wow-addon-manager/src-tauri/: Cargo.toml  tauri.conf.json
manager/wow-addon-manager/src-tauri/capabilities/: default.json
manager/wow-addon-manager/src-tauri/icons/: icon.icns
manager/wow-addon-manager/src-tauri/src/: lib.rs  main.rs
manager/wow-addon-manager/src-tauri/src/app/: bootstrap.rs  state.rs
manager/wow-addon-manager/src-tauri/src/commands/: addon_commands.rs  config_commands.rs  installation_commands.rs  installer_commands.rs  mod.rs  profile_commands.rs  provider_commands.rs  system_commands.rs
manager/wow-addon-manager/src-tauri/src/domain/: addon.rs  errors.rs  install.rs  mod.rs  profile.rs  snapshot.rs  toc.rs
manager/wow-addon-manager/src-tauri/src/infra/: logging.rs  mod.rs
manager/wow-addon-manager/src-tauri/src/installer/: addon_folder_detector.rs  fs_ops.rs  install_executor.rs  install_planner.rs  mod.rs  test_support.rs  zip_service.rs
manager/wow-addon-manager/src-tauri/src/platform/: adapter.rs  macos.rs  mod.rs  windows.rs
manager/wow-addon-manager/src-tauri/src/providers/: github_provider.rs  http.rs  local_zip_provider.rs  manual_url_provider.rs  mod.rs  provider.rs  provider_service.rs
manager/wow-addon-manager/src-tauri/src/scanner/: addon_scanner.rs  mod.rs  toc_parser.rs
manager/wow-addon-manager/src-tauri/tests/: config_snapshot.rs  db_persistence.rs  e2e_golden_path.rs  installer_pipeline.rs  platform_fixture.rs  profile_apply.rs  provider_pipeline.rs  scanner_fixture.rs
plugin/: .gitignore  (+3 more)
(+163 files in other folders)
