[package]
name = "wow-addon-manager"
version = "0.1.0"
description = "WoW 插件管理器"
authors = ["wow-player"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "wow_addon_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
zip = "2"
ureq = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
